apps/ghost/overlays/dev/patch-ghost-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  template:
    spec:
      containers:
      - name: ghost
        # Replace entire probes for dev
        readinessProbe:
          $patch: replace
          httpGet:
            path: /
            port: 2368
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 12
        livenessProbe:
          $patch: replace
          httpGet:
            path: /
            port: 2368
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 6
